--- a/ftds/build.gradle
+++ b/ftds/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 ext {
     PUBLISH_GROUP_ID = 'land.sungbin'
-    PUBLISH_VERSION = '1.0.0'
+    PUBLISH_VERSION = 'dev-0.0.1'
     PUBLISH_ARTIFACT_ID = 'ftds'
     PUBLISH_DESCRIPTION = 'Fake Toss Design System'
     PUBLISH_URL = 'https://github.com/fake-toss/faketoss-design-system-android'
