--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,8 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.compiler:compiler:$compose_version"
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation project(":ftds")
 }
